Funktioniernede QUesitonController HTTP endpooitns mit Security sowie invalide Reponses